--- a/articles.html
+++ b/articles.html
@@ -1,8 +1,7 @@
 {{define "content"}}
 <h1>Articles</h1>
-<ul>
-    <li>Article 1</li>
-    <li>Article 2</li>
-    <!-- Add more articles as needed -->
-</ul>
+<form action="https://duckduckgo.com/" target="_blank">
+    <input type="hidden" name="sites" value="adamj.eu" />
+    <input type="search" id="search" name="q" placeholder="Search" />
+</form>
 {{end}}
