updated contact and home site and added assets

--- a/base.html
+++ b/base.html
@@ -6,12 +6,13 @@
     <meta  name="description" content="Personal blog about tech, programming, and leadership."/>
     <title>{{.Title}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.classless.min.css">
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <header>
     <hgroup>
         <h1>Julien Dedek</h1>
-        <h2>Just a pure semantic HTML markup blog (hat'em CSS)</h2>
+        <h2>Engineering Management 🤝 Software Development</h2>
     </hgroup>
     <nav>
         <ul>
