--- a/home.html
+++ b/home.html
@@ -1,4 +1,12 @@
 {{define "content"}}
-<h1>Welcome to the Home Page</h1>
-<p>This is some content for the home page.</p>
+    <h1>Home</h1>
+    <section>
+        <h2>About me</h2>
+        <img src="assets/img/julien.jpeg" alt="A photo of me">
+        <p>👋 Ciao I'm Julien, and welcome to my site.</p>
+        <p>💻 I'm an engineering manager and software engineer working with Django and Go.</p>
+        <p>🇩🇪 I'm based in Düsseldorf,DE.</p>
+        <p>📷 I love photography and traveling.</p>
+        <p>🍕 I love to make neapolitan pizza from scratch.</p>
+    </section>
 {{end}}
